--- a/views/User/ViewRecord.ejs
+++ b/views/User/ViewRecord.ejs
@@ -10,8 +10,8 @@
 	<hr>
 	<h3>contact: <%= user.email %> </h3>
 	
-	<a class="btn btn-medium btn-primary" href="/User/edit/<%= user.id %>">Edit</a>
-	<% }) %>-->
+	<a class="btn btn-medium btn-primary" href="/User/edit/<%= user.id %>">Edit</a>-->
+	<% }) %>
 
 	<h1> Successfully Login </h1>
 </div>
