--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -50,7 +50,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <% if (session.authenticated) { %>
-              <li class="active"><a href="/user/show/<%= session.User.id %>"><%= session.User.name %> </a> </li>
+              <li class="active"><a href="/user/ViewRecord/<%= session.User.id %>"><%= session.User.name %> </a> </li>
             <% } %>
             <% if (session.authenticated && session.User.admin) { %>
             <li><a href="/user">User Administration</a></li>
