--- a/views/session/new.ejs
+++ b/views/session/new.ejs
@@ -1,4 +1,4 @@
-<form action="/session/create" method="POST" class="form-signin">
+<form action="/User/ViewRecord" method="POST" class="form-signin" style="margin-top: 8%; margin-left: 30%;margin-right: 30%;border: 1px solid green;padding: 8px;">
 	<h2 class="form-signin-heading">Please sign in...</h2>
 
 	<input type="text" class="form-control" placeholder="Email address" name="email">
