--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,7 +35,7 @@
 
   </head>
 
-  <body style="background-color: #ff0;">
+  <body>
 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
