--- a/views/User/ViewRecord.ejs
+++ b/views/User/ViewRecord.ejs
@@ -6,14 +6,42 @@
 	<% } else { %>
 			<img src="/images/pawn.png">pawn
 	<% } %>		
-	<h3><%= user.title %> </h3>
+	<!--<h3><%= user.title %> </h3>
 	<hr>
 	<h3>contact: <%= user.email %> </h3>
 	
-	<a class="btn btn-medium btn-primary" href="/user/edit/<%= user.id %>">Edit</a>
+	<a class="btn btn-medium btn-primary" href="/user/edit/<%= user.id %>">Edit</a>-->
 	
 	
 
 	<h1> Successfully Login </h1>
+	<!--<form action="/User/create" method="POST" style="margin-top: 8%; margin-left: 30%;margin-right: 30%;border: 1px solid green;padding: 15px;" id="sign-up-form" class="form-signin">
+	<h2 class="form-signin-heading" style="margin-top:0px">Create an account</h2>
+
+
+	<div class="control-group">
+	<input type="text" class="form-control" placeholder="your name" name="userName">
+	</div>
+
+	<div class="control-group">
+	<input type="text" class="form-control" placeholder="your title" name="title">
+	</div>
+	
+	<div class="control-group">
+	<input type="text" class="form-control" placeholder="email address" name="email">
+	</div>
+
+	<div class="control-group">
+	<input type="password" class="form-control" placeholder="password" name="password" id="password">
+	</div>
+
+	<div class="control-group">
+	<input type="password" class="form-control" placeholder="password confirmation" name="confirmation">
+	<br />
+	</div>
+
+	<input type="submit" class="btn btn-lg btn-primary btn-block" value="Create Account"/>
+	<input type="hidden" name="_csrf" value="<%= _csrf %>" />-->
+</form>
 </div>
 
