--- a/assets/styles/custom.less
+++ b/assets/styles/custom.less
@@ -29,7 +29,7 @@ body {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: gray;
+  color: blue;
 }
 
 .container {
@@ -44,7 +44,7 @@ padding: 19px 29px 29px;
 margin: 0 auto 20px;
 margin-top: 20px;
 background-color: @lightGray;
-border: 1px solid @green;
+border: 1px solid @blue;
 -webkit-border-radius: 15px;
 -moz-border-radius: 15px;
 border-radius: 15px;
@@ -67,7 +67,7 @@ padding: 7px 9px;
     margin-top: 10%;
     margin-left: 30%;
     margin-right: 30%;
-    border: 1px solid green;
+    border: 1px solid orange;
     padding: 15px;
     }
 
