--- a/views/session/new.ejs
+++ b/views/session/new.ejs
@@ -5,5 +5,11 @@
 	<input type="password" class="form-control" placeholder="Password" name="password">
 	<input type="submit" class="btn btn-lg btn-primary btn-block" value="Sign-in"/>
 	<input type="hidden" name="_csrf" value="<%= _csrf %>" />
+
+	<% flash.get('success').forEach(function (message) { %>
+    <div style="color:green;">
+      <%= message %>
+    </div>
+<% }) %>
 	
 </form>
