--- a/views/static/index.ejs
+++ b/views/static/index.ejs
@@ -2,7 +2,7 @@
   <div class="jumbotron">
     <h1>Survey Form </h1>
 
-    <h2>Get Started by sign up</h2>
+    <h2>Get Started by sign up form given here </h2>
     <a href="/user/index" class="btn btn-lg btn-success">Sign up now!</a>
   </div>
 </div>
